--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body{
 .container{
   width: 100vw;
   height: 100vh;
-  background-image: url('../assets/splash_bg.png');
+  background-image: url('../assets/view_0.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
